v1.3/markdown/asct-b/asct-b-vh-heart.md
# Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) table for Heart v1.2

### Description
[Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) tables](https://hubmapconsortium.github.io/ccf/pages/ccf-anatomical-structures.html) aim to capture the nested *part_of* structure of anatomical human body parts, the typology of cells, and biomarkers used to identify cell types. The tables are authored and reviewed by an international team of experts.

| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Shin Lin; Marc Halushka; Avinash Boppana |
| **Creator ORCID(s):** | [0000-0003-0118-0413](https://orcid.org/0000-0003-0118-0413); [0000-0002-7112-7389](https://orcid.org/0000-0002-7112-7389); [0000-0003-0834-8274](https://orcid.org/0000-0003-0834-8274) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Reviewer(s):** | Kalyanam Shivkumar; Peter Hanna; Ellen M. Quardokus
| **Reviewers ORCID(s):** |[0000-0002-4121-1766](https://orcid.org/0000-0002-4121-1766); [0000-0003-3092-5090](https://orcid.org/0000-0003-3092-5090); [0000-0001-7655-4833](https://orcid.org/0000-0001-7655-4833)|
| **Creation Date:** | 2022-12-15|
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | OT2OD026671 |
| **HuBMAP ID:** | HBM877.BTSR.898 |
| **Data Table:** | [Heart v1.2](https://hubmapconsortium.github.io/ccf-releases/v1.2/asct-b/asct-b-vh-heart.csv) |
| **DOI:** | [https://doi.org/10.48539/HBM877.BTSR.898](https://doi.org/10.48539/HBM877.BTSR.898) |
| **How to Cite This Data Table:** | Shin Lin; Marc Halushka; Avinash Boppana, HuBMAP ASCT+B Tables. Heart v1.2, https://doi.org/10.48539/HBM877.BTSR.898, Accessed on December 15, 2022. |
| **How to Cite ASCT+B Tables Overall:** | Quardokus, Ellen, Bruce W. Herr II, Lisel Record, Katy B&ouml;rner. 2021. [*HuBMAP ASCT+B Tables*](https://hubmapconsortium.github.io/ccf/pages/ccf-anatomical-structures.html). Accessed on December 15, 2022.  |
