v2.0/markdown/asct-b/asct-b-vh-heart.md
# Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) table for Heart v1.3

### Description
[Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) tables](https://humanatlas.io/asctb-tables) aim to capture the nested *part_of* structure of anatomical human body parts, the typology of cells, and biomarkers used to identify cell types. The tables are authored and reviewed by an international team of experts.

Minor changes were made for Heart v1.3 to ensure all cell types were mapped to Cell Ontology and genes and proteins were mapped to the Human Gene Ontology (HUGO) Gene Nomenclature Committee (HGNC).

[Heart v1.2](https://cdn.humanatlas.io/hra-releases/v1.3/asct-b/asct-b-vh-heart.csv) harmonized cell type nomenclature with the [Azimuth heart scRNAseq reference map](https://azimuth.hubmapconsortium.org/references/#Human%20-%20Heart).



| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Shin Lin; Marc Halushka; Avinash Boppana |
| **Creator ORCID(s):** | [0000-0003-0118-0413](https://orcid.org/0000-0003-0118-0413); [0000-0002-7112-7389](https://orcid.org/0000-0002-7112-7389); [0000-0003-0834-8274](https://orcid.org/0000-0003-0834-8274) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Reviewer(s):** | Kalyanam Shivkumar; Peter Hanna; Ellen M. Quardokus
| **Reviewers ORCID(s):** |[0000-0002-4121-1766](https://orcid.org/0000-0002-4121-1766); [0000-0003-3092-5090](https://orcid.org/0000-0003-3092-5090); [0000-0001-7655-4833](https://orcid.org/0000-0001-7655-4833)|
| **Creation Date:** | 2023-12-15|
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | OT2OD033756; OT2OD026671 |
| **HuBMAP ID:** | HBM723.KFRP.582 |
| **Data Table:** | [Heart v1.3](https://cdn.humanatlas.io/hra-releases/v2.0/asct-b/asct-b-vh-heart.csv) |
| **DOI:** | [https://doi.org/10.48539/HBM723.KFRP.582](https://doi.org/10.48539/HBM723.KFRP.582) |
| **How to Cite This Data Table:** | Shin Lin; Marc Halushka; Avinash Boppana, HuBMAP ASCT+B Tables. Heart v1.3, https://doi.org/10.48539/HBM723.KFRP.582, Accessed on December 15, 2023. |
| **How to Cite ASCT+B Tables Overall:** | Quardokus, Ellen, Bruce W. Herr II, Lisel Record, Katy B&ouml;rner. 2023. [*HuBMAP ASCT+B Tables*](https://humanatlas.io/asctb-tables). Accessed on December 15, 2023.  |
